
1.31
Content 
- Added a new enemy, a rope snake that sacrifices itself to wrap you up!
- Added a new spell, Electrify (which will be cast at you by witches in the future)
- Shock witches that cast electrical spells at you from a distance

1.32
Content 
- Chain witch who fights by throwing chains at you. She will attempt to close the gap, and will lock the chains in place if she gets near!

Future content planned:
- Ability to close nearby doors
- Item shops scattered around the map, allowing you to buy swords and outfits
- Magical rope traps which require enchanted knives to cut
- Enchanted knives, which are found only in chests
- Latex witches that cast latex and slime spells at you from a distance
- Inventory system which lets you view special items and restraints (shows you how hard it is to break free from them... after you've struggled enough)
- Mana-boosting mittens which increase spell power and decrease mana costs, but make it harder to struggle out of things
- Enchanted heels which empower your melee attacks
- Items like swords and wands which improve melee attack damage or willpower
- More simple restraint traps: mittens, locked blindfolds/gags, leg irons, belts
- Chastity belt trap that puts a plug in you, increasing your arousal while walking
- Chastity belt trap that puts a toy in you. Toys are powered by casting magic
- New shrine: chastity goddess. Places you in a set of magic cuffs that prevent you from being restrained. However if your willpower falls below maximum, the cuffs snap together until you get back to full willpower!

Spell Ideas:
- Clear Jam spell, which clears jammed green locks from either an object or the player, depending on where it is cast
- Divine Cuffs, a spell which gives you glowing arm and leg cuffs that block low level restraints from being put on you. Lasts 10 turns.
- Ice Storm, a temporary AoE which has a chance to deal damage and stun creatures inside. Drains player willpower but does not slow or restraint the player.