@@ -4,7 +4,17 @@ var KinkyDungeonShrineBaseCosts = {
 	"Leather": 15,
 	"Metal": 20,
 	"Will": 10,
+	"Elements": 50,
+	"Conjure": 50,
+	"Illusion": 50,
 };
+
+var KinkyDungeonShrineBaseCostGrowth = {
+	"Elements": 2,
+	"Conjure": 2,
+	"Illusion": 2,
+};
+
 var KinkyDungeonShrineCosts = {};
 var KinkyDungeonShrineTypeRemove = ["Charms", "Leather", "Metal"]; // These shrines will always remove restraints associated with their shrine
 
@@ -15,6 +25,7 @@ function KinkyDungeonShrineInit() {
 
 function KinkyDungeonShrineAvailable(type) {
 	if (KinkyDungeonShrineTypeRemove.includes(type) && KinkyDungeonGetRestraintsWithShrine(type).length > 0) return true;
+	else if ((type == "Elements" || type == "Illusion" || type == "Conjure") && KinkyDungeonGetUnlearnedSpells(0, 5 + MiniGameKinkyDungeonCheckpoint, KinkyDungeonSpellList[type]).length > 0) return true;
 	else if (type == "Will" && (KinkyDungeonStatWillpower < KinkyDungeonStatWillpowerMax || KinkyDungeonStatStamina < KinkyDungeonStatStaminaMax)) return true;
 
 	return false;
@@ -23,7 +34,9 @@ function KinkyDungeonShrineAvailable(type) {
 
 function KinkyDungeonShrineCost(type) {
 	let mult = 1.0;
-	if (KinkyDungeonShrineCosts[type] > 0) mult = Math.pow(1.33, KinkyDungeonShrineCosts[type]);
+	let growth = 1.33;
+	if (KinkyDungeonShrineBaseCostGrowth[type]) growth = KinkyDungeonShrineBaseCostGrowth[type];
+	if (KinkyDungeonShrineCosts[type] > 0) mult = Math.pow(growth, KinkyDungeonShrineCosts[type]);
 
 	return Math.round(KinkyDungeonShrineBaseCosts[type] * mult);
 }
@@ -37,6 +50,15 @@ function KinkyDungeonPayShrine(type) {
 		KinkyDungeonRemoveRestraintsWithShrine(type);
 
 		ShrineMsg = TextGet("KinkyDungeonPayShrineRemoveRestraints");
+	} else if (type == "Elements" || type == "Illusion" || type == "Conjure") {
+		let SpellsUnlearned = KinkyDungeonGetUnlearnedSpells(0, 5, KinkyDungeonSpellList[type]);
+		if (Math.random() < 0.1 || SpellsUnlearned.length == 0) SpellsUnlearned = KinkyDungeonGetUnlearnedSpells(0, 5 + MiniGameKinkyDungeonCheckpoint, KinkyDungeonSpellList[type]);
+		
+		let spellIndex = Math.floor(Math.random()*SpellsUnlearned.length);
+
+		let spell = SpellsUnlearned[spellIndex];
+		ShrineMsg = TextGet("KinkyDungeonPayShrineSpell").replace("SpellLearned", TextGet("KinkyDungeonSpell" + spell.name));
+		KinkyDungeonSpells.push(spell);
 	} else if (type == "Will") {
 		KinkyDungeonStatWillpower = KinkyDungeonStatWillpowerMax;
 		KinkyDungeonStatStamina = KinkyDungeonStatStaminaMax;
